exports[`test getPrimaryBackgroundClass has dark version 1`] = `"background--dark-primary"`;

exports[`test getPrimaryBackgroundClass has light version 1`] = `"background--light-primary"`;

exports[`test getSecondayBackgroundClass has dark version 1`] = `"background--dark-secondary"`;

exports[`test getSecondayBackgroundClass has light version 1`] = `"background--light-secondary"`;

exports[`test getTertiaryBackgroundColor has dark version 1`] = `
Object {
  "backgroundColor": "rgba(255,255,255,.2)",
}
`;

exports[`test getTertiaryBackgroundColor has light version 1`] = `
Object {
  "backgroundColor": "rgba(0,0,0,.2)",
}
`;

exports[`test getTertiaryTextClass has dark version 1`] = `"text-dark-tertiary"`;

exports[`test getTertiaryTextClass has light version 1`] = `"text-light-tertiary"`;

exports[`test getTertiaryTextColor has dark version 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`test getTertiaryTextColor has light version 1`] = `
Object {
  "color": "rgba(0,0,0,.5)",
}
`;

exports[`test renders light version 1`] = `
<div className="grid one-whole flush soft-top">
<div className="hard grid__item one-tenth floating__item " style={{...}}>
<small>
<small>
20
</small>
</small>
</div>
<div className="grid__item eight-tenths push-half-ends floating__item soft-half-sides" style={{...}} onTouchEnd={[Function]} onTouchMove={[Function]} onClick={[Function]}>
<div className="play-bar rounded play-bar_uziqvr" style={{...}} />
<div className="play-bar--active_18t9bb6 floating--right" style={{...}}>
<div className="play-bar_uziqvr rounded background--dark-primary" />
<button className="scrub-dot_l7j38z plain floating__item round background--dark-primary" />
</div>
<div className="cover" style={{...}} />
</div>
<div className="hard grid__item one-tenth floating__item " style={{...}}>
<small>
<small>
12:23
</small>
</small>
</div>
</div>
`;

exports[`test renders with props 1`] = `
<div className="grid one-whole flush soft-top">
<div className="hard grid__item one-tenth floating__item " style={{...}}>
<small>
<small>
20
</small>
</small>
</div>
<div className="grid__item eight-tenths push-half-ends floating__item soft-half-sides" style={{...}} onTouchEnd={[Function]} onTouchMove={[Function]} onClick={[Function]}>
<div className="play-bar rounded play-bar_uziqvr" style={{...}} />
<div className="play-bar--active_18t9bb6 floating--right" style={{...}}>
<div className="play-bar_uziqvr rounded background--light-primary" />
<button className="scrub-dot_l7j38z plain floating__item round background--light-primary" />
</div>
<div className="cover" style={{...}} />
</div>
<div className="hard grid__item one-tenth floating__item " style={{...}}>
<small>
<small>
12:23
</small>
</small>
</div>
</div>
`;
